<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asset"
        android:text="@string/Txt"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/radMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/Male" />

    <RadioButton
        android:id="@+id/radFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/Female" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdGrpDayNight">

        <RadioButton
            android:id="@+id/radNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/None" />

        <RadioButton
            android:id="@+id/radDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Day" />

        <RadioButton
            android:id="@+id/radNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/Night" />
    </RadioGroup>

    <!-- Circular ProgressBar -->
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar1"
        android:layout_centerInParent="true"
        android:layout_below="@id/rdGrpDayNight"
        android:layout_marginTop="50dp"
        android:visibility="visible" />

    <!-- Horizontal ProgressBar -->
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:layout_centerInParent="true"
        android:layout_below="@id/progressBar1"
        android:layout_marginTop="50dp"
        android:visibility="visible"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progress="30"
        android:max="100"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    </ProgressBar>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Animated Button"
    android:id="@+id/btnAnime"/>

    </LinearLayout>